--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,4 @@ before_install:
 
 
 script:
-  - docker run james/docker-react npm run test -- --coverage
+  - docker run -e CI=true USERNAME/docker-react npm run test
