update repo name

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+language: generic
 sudo : required
 services:
   - docker
@@ -10,4 +11,4 @@ before_install:
 
 
 script:
-  - docker run -e CI=true USERNAME/docker-react npm run test
+  - docker run -e CI=true james/docker-react npm run test
